# rema

./: .prettierignore  Cargo.toml  README.md  cspell.json  package-lock.json  package.json  releases.json
.github/workflows/: release.yml
src/: cli.rs  ctx.rs  errors.rs  gh.rs  lib.rs  main.rs  read.rs  transform.rs  transformer.rs  write.rs  writer.rs
src/api/: gh.rs  git.rs  mod.rs
