[package]
name = "rema"
authors = ["Firgrep <code@filipniklas.com>"]
license = "Apache-2.0"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
semver = "1.0"
inquire = { version = "0.7.5", features = ["editor"] }
colorize = "0.1.0"
